Load photo and added menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
 		<a id="close"><span class="icon ion-android-close"></span>Close</a>
 
+		<menu>
+			<a href="">About</a>
+			<a href="">Help</a>
+			<a href="">Contact</a>
+		</menu>
+
 		<a id="buy">
 			<span class="icon ion-pricetag"></span>Buy <span class="type">album</span> for <span class="price">$9</span>
 		</a>
@@ -45,11 +51,7 @@
 	<div id="content"></div>
 
 	<!-- View -->
-	<div id="view" class="">
-
-		<div id="image" style="background-image: url('../lychee_main/uploads/big/857fae2619b2ffab3c1142ab8520aad0.JPG')"></div>
-
-	</div>
+	<div id="view" class=""></div>
 
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
