Added placeholder for user-logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<header>
 
 		<div id="about">
-			<img id="logo" src="data/users/1.png">
+			<img id="logo" src="assets/img/user.jpg">
 			<h1 id="name">Tobias Reich</h1>
 		</div>
 
