Added retina support

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="bower_components/retina.js/src/retina.js"></script>
 	<script type="text/javascript" src="assets/js/miniLychee.js"></script>
 	<script type="text/javascript" src="assets/js/content.js"></script>
 	<script type="text/javascript" src="assets/js/init.js"></script>
