Load user from db

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div id="about">
 			<img id="logo" src="assets/img/user.jpg">
-			<h1 id="name">Tobias Reich</h1>
+			<h1 id="name">Loading ...</h1>
 		</div>
 
 		<a id="close"><span class="icon ion-android-close"></span>Close</a>
@@ -42,7 +42,7 @@
 		</menu>
 
 		<a id="buy">
-			<span class="icon ion-pricetag"></span>Buy <span class="type">album</span> for <span class="price">$9</span>
+			<span class="icon ion-pricetag"></span>Buy <span class="type">album</span> for <span class="price">-</span>
 		</a>
 
 	</header>
