Redirect user to PayPal, button.coffee, get link for album and photos

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 			<a href="">Contact</a>
 		</menu>
 
-		<a id="buy">
-			<span class="icon ion-pricetag"></span>Buy <span class="type">album</span> for <span class="price">-</span>
-		</a>
+		<a id="buy"></a>
 
 	</header>
 
@@ -57,6 +55,7 @@
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/retina.js/src/retina.js"></script>
 	<script type="text/javascript" src="assets/js/miniLychee.js"></script>
+	<script type="text/javascript" src="assets/js/button.js"></script>
 	<script type="text/javascript" src="assets/js/content.js"></script>
 	<script type="text/javascript" src="assets/js/init.js"></script>
 
