Added download button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<!-- CSS -->
 		<link type="text/css" rel="stylesheet" href="bower_components/normalize.css/normalize.css">
 		<link type="text/css" rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
+		<link type="text/css" rel="stylesheet" href="bower_components/basicModal/dist/basicModal.min.css">
 		<link type="text/css" rel="stylesheet" href="assets/css/content.css">
 		<link type="text/css" rel="stylesheet" href="assets/css/header.css">
 		<link type="text/css" rel="stylesheet" href="assets/css/main.css">
@@ -54,6 +55,7 @@
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/retina.js/src/retina.js"></script>
+	<script type="text/javascript" src="bower_components/basicModal/dist/basicModal.min.js"></script>
 	<script type="text/javascript" src="assets/js/miniLychee.js"></script>
 	<script type="text/javascript" src="assets/js/button.js"></script>
 	<script type="text/javascript" src="assets/js/content.js"></script>
