--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title></title>
+		<title>PhotoStore</title>
 
 		<meta name="author" content="Tobias Reich">
 		<meta name="keywords" content="">
@@ -16,10 +16,7 @@
 		<link type="text/css" rel="stylesheet" href="bower_components/normalize.css/normalize.css">
 		<link type="text/css" rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
 		<link type="text/css" rel="stylesheet" href="bower_components/basicModal/dist/basicModal.min.css">
-		<link type="text/css" rel="stylesheet" href="assets/css/content.css">
-		<link type="text/css" rel="stylesheet" href="assets/css/header.css">
-		<link type="text/css" rel="stylesheet" href="assets/css/main.css">
-		<link type="text/css" rel="stylesheet" href="assets/css/view.css">
+		<link type="text/css" rel="stylesheet" href="assets/min/main.css">
 
 	</head>
 	<body>
@@ -53,10 +50,7 @@
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/basicModal/dist/basicModal.min.js"></script>
-	<script type="text/javascript" src="assets/js/miniLychee.js"></script>
-	<script type="text/javascript" src="assets/js/button.js"></script>
-	<script type="text/javascript" src="assets/js/content.js"></script>
-	<script type="text/javascript" src="assets/js/init.js"></script>
+	<script type="text/javascript" src="assets/min/main.js"></script>
 
 	</body>
 </html>
