--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		<a id="close"><span class="icon ion-android-close"></span>Close</a>
 
 		<menu>
-			<a href="">About</a>
-			<a href="">Help</a>
-			<a href="">Contact</a>
+			<a href="redirect.html">New Code</a>
+			<a href="#" id="button_contact">Contact</a>
+			<a href="#" id="button_support">Support</a>
 		</menu>
 
 		<a id="buy"></a>
