Improved buy button #2

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 		</menu>
 
 		<a id="buy"></a>
+		<img class="paymentIcon" alt="Visa" src="assets/img/visa.png" height="22">
+		<img class="paymentIcon" alt="MasterCard" src="assets/img/mastercard.png" height="22">
+		<img class="paymentIcon" alt="PayPal" src="assets/img/paypal.png" height="22">
 
 	</header>
 
