--- a/redirect.html
+++ b/redirect.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Tobias Reich">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
-		<meta name="viewport" content="user-scalable=no, initial-scale=1">
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=.8">
 
 		<link rel="shortcut icon" href="favicon.ico">
 
