Optimized for small screens #1

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 			<a href="#" id="button_support">Support</a>
 		</menu>
 
-		<a id="buy"></a>
-		<img class="paymentIcon" alt="Visa" src="assets/img/visa.png" height="22">
-		<img class="paymentIcon" alt="MasterCard" src="assets/img/mastercard.png" height="22">
-		<img class="paymentIcon" alt="PayPal" src="assets/img/paypal.png" height="22">
+		<div id="buy_wrapper">
+			<a id="buy"></a>
+			<img class="paymentIcon" alt="Visa" src="assets/img/visa.png" height="22">
+			<img class="paymentIcon" alt="MasterCard" src="assets/img/mastercard.png" height="22">
+			<img class="paymentIcon" alt="PayPal" src="assets/img/paypal.png" height="22">
+		</div>
 
 	</header>
 
