--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 	<!-- View -->
 	<div id="view" class=""></div>
 
+	<!-- Footer -->
+	<footer>
+		<a href="http://23.253.61.40/sites/terms_of_use.html" target="_blank">Terms of Use</a>
+		<a href="http://23.253.61.40/sites/refund_policy.html" target="_blank">Refund Policy</a>
+	</footer>
+
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/basicModal/dist/basicModal.min.js"></script>
