Added footer to redirect

--- a/redirect.html
+++ b/redirect.html
@@ -21,6 +21,12 @@
 	</head>
 	<body>
 
+	<!-- Footer -->
+	<footer>
+		<a href="http://23.253.61.40/sites/terms_of_use.html" target="_blank">Terms of Use</a>
+		<a href="http://23.253.61.40/sites/refund_policy.html" target="_blank">Refund Policy</a>
+	</footer>
+
 	<!-- JS -->
 	<script type="text/javascript" src="bower_components/jQuery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/basicModal/dist/basicModal.min.js"></script>
